--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,7 @@
     "baseUrl": "./",
     "paths": {
       "@/*": ["./*"],
-      "*": ["declaration/*"]
+      "*": ["app/declaration/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
