--- a/package.json
+++ b/package.json
@@ -12,20 +12,20 @@
     "@types/node": "20.9.4",
     "@types/react": "18.2.38",
     "@types/react-dom": "18.2.17",
-    "autoprefixer": "10.4.16",
     "eslint": "8.54.0",
     "eslint-config-next": "14.0.3",
     "next": "14.0.3",
-    "postcss": "8.4.31",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-router-dom": "^6.20.0",
     "react-scroll": "^1.9.0",
-    "tailwindcss": "3.3.5",
     "typescript": "5.3.2"
   },
   "devDependencies": {
     "@types/react-scroll": "^1.8.10",
-    "daisyui": "^4.4.2"
+    "autoprefixer": "^10.4.16",
+    "daisyui": "^4.6.0",
+    "postcss": "^8.4.33",
+    "tailwindcss": "^3.4.1"
   }
 }
