--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "portfolio",
+  "name": "my-project",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,23 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/node": "20.9.4",
-    "@types/react": "18.2.38",
-    "@types/react-dom": "18.2.17",
-    "eslint": "8.54.0",
-    "eslint-config-next": "14.0.3",
-    "next": "14.0.3",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-router-dom": "^6.20.0",
-    "react-scroll": "^1.9.0",
-    "typescript": "5.3.2"
+    "react": "^18",
+    "react-dom": "^18",
+    "next": "14.1.4"
   },
   "devDependencies": {
-    "@types/react-scroll": "^1.8.10",
-    "autoprefixer": "^10.4.16",
-    "daisyui": "^4.6.0",
-    "postcss": "^8.4.33",
-    "tailwindcss": "^3.4.1"
+    "typescript": "^5",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "autoprefixer": "^10.0.1",
+    "postcss": "^8",
+    "tailwindcss": "^3.3.0",
+    "eslint": "^8",
+    "eslint-config-next": "14.1.4"
   }
 }
