--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.1.4",
+    "next": "^14.2.23",
     "react": "^18",
     "react-dom": "^18"
   },
@@ -17,12 +17,12 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "autoprefixer": "^10.4.19",
-    "daisyui": "^4.9.0",
+    "autoprefixer": "^10.4.20",
+    "daisyui": "^4.12.23",
     "eslint": "^8",
     "eslint-config-next": "14.1.4",
-    "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.3",
+    "postcss": "^8.5.1",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5"
   }
 }
